# spark-on-slurm

./: LICENSE  README.md  pyproject.toml
examples/: sum.py
sparkjq/: __init__.py  lib.py  slurm.py  spark.py
src/: lib.py  slurm.py  spark.py
