[project]
name = "spark-jobqueue"
version = "0.1.0"
description = "A sample project for Spark job queue management"
authors = [
    { name="Rodrigo Loza", email="roloza7@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"